--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
         <allure.version>2.21.0</allure.version>
         <testng.version>7.7.1</testng.version>
         <lombok.version>1.18.26</lombok.version>
-        <selenium.version>4.8.1</selenium.version>
+        <selenium.version>4.7.2</selenium.version>
         <shutterbug.version>1.6</shutterbug.version>
-        <log4j.version>2.20.0</log4j.version>
+        <log4j.version>2.17.1</log4j.version>
     </properties>
 
     <dependencies>
@@ -69,6 +69,11 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-reload4j</artifactId>
+            <version>2.0.6</version>
         </dependency>
 
     </dependencies>
